# grpc_streaming_test

./: Cargo.toml  README.md  build.rs
proto/: api.proto  test.proto
src/: client.rs  client_case_1.rs  client_case_2.rs  log_util.rs  server.rs  test.rs  test_grpc.rs
src/api/: api.rs  api_grpc.rs
